修复: 统一独立账号为邮箱登录
